Improved NPE checks